--- a/src/templates/resumen.html
+++ b/src/templates/resumen.html
@@ -4,6 +4,7 @@
 </head>
 <body>
     {% block content %}
+    <div class="card-contenedor">  
         <h1>Caja</h1>
         <table class="table table-bordered">
             <thead>
@@ -26,5 +27,6 @@
             </tbody>
         </table>
         <a href="/inicio" class="btn, text-center mb-4 mt-4 p-2" style="border: none;">Inicio</a>
+    </div>
     {% endblock %}
 </body>
