--- a/src/templates/inicio.html
+++ b/src/templates/inicio.html
@@ -15,62 +15,61 @@
         <a href="{{ url_for('inicio') }}">
             <img src="/static/img/logo.png" alt="Logo">
         </a>
-  
+        <h5 class="titulo">Bienvenido</h5>
     </div>
-    <div class="container text-center ">
-        <h5 class="mb-5">Bienvenido</h5>
-        <div class="row  justify-content-center">
-            <div class="col-md-4">
-                <div class="card p-3" style="width: 16rem; border-radius: 1em;">
+    <div class="container text-center d-flex"> 
+        <div class="row justify-content-center align-items-center">
+            <div class="col-md-4 justify-content-center align-content-center">
+                <div class="card p-4 mb-2 mx-auto d-flex flex-column justify-content-center" >
                     <a class="link-home" href="{{ url_for('alta') }}">
-                        <h5 class="card-title " >Nuevo alumno</h5>
+                        <h5 class="card-title " >Alumnos</h5>
                         <img src="static/img/nuevo-alumno.svg" class="card-img-top" alt="..."> 
                     </a>
                 </div>
             </div>
-            <div class="col-md-4">
-                <div class="card p-3" style="width: 16rem; border-radius: 1em;">
+            <div class="col-md-4 justify-content-center align-content-center">
+                <div class="card p-4 mb-2 mx-auto d-flex flex-column justify-content-center" >
                     <a class="link-home" href="{{ url_for('ingresos') }}">
                         <h5 class="card-title">Ingresos</h5>
                         <img src="static/img/ingresos.svg" class="card-img-top" alt="...">  
                     </a>   
                 </div>
             </div>
-            <div class="col-md-4">
-                <div  class="card p-3" style="width: 16rem; border-radius: 1em;">
+            <div class="col-md-4 justify-content-center align-content-center">
+                <div class="card p-4 mb-2 mx-auto d-flex flex-column justify-content-center" >
                     <a class="link-home" href="{{ url_for('egresos') }}">
                         <h5 class="card-title">Egresos</h5>
                         <img src="static/img/egresos.svg" class="card-img-top" alt="...">     
                     </a>
                 </div>
             </div>
-            <div class="col-md-4">
-                <div  class="card p-3" style="width: 16rem; border-radius: 1em;">
-                    <a class="link-home" href="{{ url_for('caja') }}">
+       
+            <div class="col-md-4 justify-content-center align-content-center">
+                <div class="card p-4 mb-2 mx-auto d-flex flex-column justify-content-center" >
+                    <a class="link-home" href="{{ url_for('resumen') }}">
                         <h5 class="card-title">Caja</h5>
                         <img src="static/img/caja.svg" class="card-img-top" alt="...">     
                     </a>
                 </div>
             </div>
-            <div class="col-md-3">
-                <div  class="card p-3" style="width: 16rem; border-radius: 1em;">
+            <div class="col-md-4 justify-content-center align-content-center">
+                <div class="card p-4 mb-2 mx-auto d-flex flex-column justify-content-center" >
                     <a class="link-home" href="{{ url_for('agenda') }}">
                         <h5 class="card-title">Agenda</h5>
                         <img src="static/img/calendario.svg" class="card-img-top" alt="...">     
                     </a>
                 </div>
             </div>
-            <div class="col-md-3">
-                <div  class="card p-3" style="width: 16rem; border-radius: 1em;">
+            <div class="col-md-4 justify-content-center align-content-center">
+                <div class="card p-4 mb-2 mx-auto d-flex flex-column justify-content-center">
                     <a class="link-home" href="{{ url_for('control') }}">
-                        <h5 class="card-title">Control de pagos</h5>
+                        <h5 class="card-title">Pagos</h5>
                         <img src="static/img/control-pagos.svg" class="card-img-top" alt="...">     
                     </a>
                 </div>
             </div>
-            
-            
-        </div>
+        </div>     
+
     </div>
 </body>
 </html>
