--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -11,21 +11,20 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </head>
 <body>
- 
-        <form method="POST" action="/login"class="form-signin ">
+        <form method="POST" action="/login"class="form-signin login-form">
             <div class="contenedor-login">
                 <div class="top-bar">
                     <img class="mb-4 mt-4 p-1" src="{{ url_for('static', filename='img/logo.png') }}" alt="" width="75em" height="60em">
                 </div>
-                <h1 class="txt-login h3 mt-4 mb-3 fw-normal text-center">Iniciar Sesión</h1>
+                <h1 class="txt-login mt-4 mb-3 text-center">Iniciar Sesión</h1>
                 <div class="perfil-container">
                     <img class="mb-4  img-perfil text-center" src="{{ url_for('static', filename='img/perfil.png') }}" alt="" width="70em" height="70em">
                 </div>  
-                <div class="form-floating col-md-8 mx-auto">
-                    <input type="text" class="input-login" id="username" name="username" placeholder="Usuario" required><br><br>                 
+                <div class="">
+                    <input type="text" class="input-login p-2 mt-0" id="username" name="username" placeholder="Usuario" required><br><br>                 
                 </div>
-                <div class="form-floating col-md-8 mx-auto">                 
-                    <input type="password " class="input-login" id="password" name="password" placeholder="Contraseña" required><br>                   
+                <div class="">                 
+                    <input type="password " class="input-login p-2" id="password" name="password" placeholder="Contraseña" required><br>                   
                 </div> <br><br>
                 <div class="justify-content-center d-flex">
                     <button class="btn-login px-3 py-2 text-center" type="submit">Ingresar</button>
